server/grammars/CourseRequisitesParser.js
// Generated from .\CourseRequisitesParser.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import CourseRequisitesParserListener from './CourseRequisitesParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class CourseRequisitesParser extends antlr4.Parser {

    static grammarFileName = "CourseRequisitesParser.g4";
    static literalNames = [ null, "'and'", "'or'", "'('", "')'", "'Undergraduate level'", 
                            null, null, null, "'Minimum Grade of'" ];
    static symbolicNames = [ null, "AND", "OR", "LPAREN", "RPAREN", "COURSE_REQUISITE", 
                             "WORD", "WS", "COURSE_NAME", "COURSE_GRADE_TEXT", 
                             "COURSE_GRADE", "COURSE_WS" ];
    static ruleNames = [ "start", "course", "non_course", "and_requisite", 
                         "or_requisite", "or_group", "and_group", "group" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = CourseRequisitesParser.ruleNames;
        this.literalNames = CourseRequisitesParser.literalNames;
        this.symbolicNames = CourseRequisitesParser.symbolicNames;
    }



	start() {
	    let localctx = new StartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, CourseRequisitesParser.RULE_start);
	    try {
	        this.state = 21;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 16;
	            this.group();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 17;
	            this.match(CourseRequisitesParser.LPAREN);
	            this.state = 18;
	            this.group();
	            this.state = 19;
	            this.match(CourseRequisitesParser.RPAREN);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	course() {
	    let localctx = new CourseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, CourseRequisitesParser.RULE_course);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 23;
	        this.match(CourseRequisitesParser.COURSE_REQUISITE);
	        this.state = 24;
	        this.match(CourseRequisitesParser.COURSE_NAME);
	        this.state = 25;
	        this.match(CourseRequisitesParser.COURSE_GRADE_TEXT);
	        this.state = 26;
	        this.match(CourseRequisitesParser.COURSE_GRADE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	non_course() {
	    let localctx = new Non_courseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, CourseRequisitesParser.RULE_non_course);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 29; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 28;
	            this.match(CourseRequisitesParser.WORD);
	            this.state = 31; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	and_requisite() {
	    let localctx = new And_requisiteContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, CourseRequisitesParser.RULE_and_requisite);
	    try {
	        this.state = 40;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 33;
	            this.course();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 34;
	            this.non_course();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 35;
	            this.match(CourseRequisitesParser.LPAREN);
	            this.state = 36;
	            this.and_group();
	            this.state = 37;
	            this.match(CourseRequisitesParser.RPAREN);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 39;
	            this.and_group();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	or_requisite() {
	    let localctx = new Or_requisiteContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, CourseRequisitesParser.RULE_or_requisite);
	    try {
	        this.state = 48;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 42;
	            this.course();
	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 43;
	            this.non_course();
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 44;
	            this.match(CourseRequisitesParser.LPAREN);
	            this.state = 45;
	            this.or_group();
	            this.state = 46;
	            this.match(CourseRequisitesParser.RPAREN);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	or_group() {
	    let localctx = new Or_groupContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, CourseRequisitesParser.RULE_or_group);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 50;
	        this.and_requisite();
	        this.state = 55;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 51;
	            this.match(CourseRequisitesParser.OR);
	            this.state = 52;
	            this.and_requisite();
	            this.state = 57;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	and_group() {
	    let localctx = new And_groupContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, CourseRequisitesParser.RULE_and_group);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 58;
	        this.or_requisite();
	        this.state = 63;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1) {
	            this.state = 59;
	            this.match(CourseRequisitesParser.AND);
	            this.state = 60;
	            this.or_requisite();
	            this.state = 65;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	group() {
	    let localctx = new GroupContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, CourseRequisitesParser.RULE_group);
	    try {
	        this.state = 68;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 66;
	            this.and_group();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 67;
	            this.or_group();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

CourseRequisitesParser.EOF = antlr4.Token.EOF;
CourseRequisitesParser.AND = 1;
CourseRequisitesParser.OR = 2;
CourseRequisitesParser.LPAREN = 3;
CourseRequisitesParser.RPAREN = 4;
CourseRequisitesParser.COURSE_REQUISITE = 5;
CourseRequisitesParser.WORD = 6;
CourseRequisitesParser.WS = 7;
CourseRequisitesParser.COURSE_NAME = 8;
CourseRequisitesParser.COURSE_GRADE_TEXT = 9;
CourseRequisitesParser.COURSE_GRADE = 10;
CourseRequisitesParser.COURSE_WS = 11;

CourseRequisitesParser.RULE_start = 0;
CourseRequisitesParser.RULE_course = 1;
CourseRequisitesParser.RULE_non_course = 2;
CourseRequisitesParser.RULE_and_requisite = 3;
CourseRequisitesParser.RULE_or_requisite = 4;
CourseRequisitesParser.RULE_or_group = 5;
CourseRequisitesParser.RULE_and_group = 6;
CourseRequisitesParser.RULE_group = 7;

class StartContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CourseRequisitesParser.RULE_start;
    }

	group() {
	    return this.getTypedRuleContext(GroupContext,0);
	};

	LPAREN() {
	    return this.getToken(CourseRequisitesParser.LPAREN, 0);
	};

	RPAREN() {
	    return this.getToken(CourseRequisitesParser.RPAREN, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.enterStart(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.exitStart(this);
		}
	}


}



class CourseContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CourseRequisitesParser.RULE_course;
    }

	COURSE_REQUISITE() {
	    return this.getToken(CourseRequisitesParser.COURSE_REQUISITE, 0);
	};

	COURSE_NAME() {
	    return this.getToken(CourseRequisitesParser.COURSE_NAME, 0);
	};

	COURSE_GRADE_TEXT() {
	    return this.getToken(CourseRequisitesParser.COURSE_GRADE_TEXT, 0);
	};

	COURSE_GRADE() {
	    return this.getToken(CourseRequisitesParser.COURSE_GRADE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.enterCourse(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.exitCourse(this);
		}
	}


}



class Non_courseContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CourseRequisitesParser.RULE_non_course;
    }

	WORD = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(CourseRequisitesParser.WORD);
	    } else {
	        return this.getToken(CourseRequisitesParser.WORD, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.enterNon_course(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.exitNon_course(this);
		}
	}


}



class And_requisiteContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CourseRequisitesParser.RULE_and_requisite;
    }

	course() {
	    return this.getTypedRuleContext(CourseContext,0);
	};

	non_course() {
	    return this.getTypedRuleContext(Non_courseContext,0);
	};

	LPAREN() {
	    return this.getToken(CourseRequisitesParser.LPAREN, 0);
	};

	and_group() {
	    return this.getTypedRuleContext(And_groupContext,0);
	};

	RPAREN() {
	    return this.getToken(CourseRequisitesParser.RPAREN, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.enterAnd_requisite(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.exitAnd_requisite(this);
		}
	}


}



class Or_requisiteContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CourseRequisitesParser.RULE_or_requisite;
    }

	course() {
	    return this.getTypedRuleContext(CourseContext,0);
	};

	non_course() {
	    return this.getTypedRuleContext(Non_courseContext,0);
	};

	LPAREN() {
	    return this.getToken(CourseRequisitesParser.LPAREN, 0);
	};

	or_group() {
	    return this.getTypedRuleContext(Or_groupContext,0);
	};

	RPAREN() {
	    return this.getToken(CourseRequisitesParser.RPAREN, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.enterOr_requisite(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.exitOr_requisite(this);
		}
	}


}



class Or_groupContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CourseRequisitesParser.RULE_or_group;
    }

	and_requisite = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(And_requisiteContext);
	    } else {
	        return this.getTypedRuleContext(And_requisiteContext,i);
	    }
	};

	OR = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(CourseRequisitesParser.OR);
	    } else {
	        return this.getToken(CourseRequisitesParser.OR, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.enterOr_group(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.exitOr_group(this);
		}
	}


}



class And_groupContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CourseRequisitesParser.RULE_and_group;
    }

	or_requisite = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Or_requisiteContext);
	    } else {
	        return this.getTypedRuleContext(Or_requisiteContext,i);
	    }
	};

	AND = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(CourseRequisitesParser.AND);
	    } else {
	        return this.getToken(CourseRequisitesParser.AND, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.enterAnd_group(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.exitAnd_group(this);
		}
	}


}



class GroupContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CourseRequisitesParser.RULE_group;
    }

	and_group() {
	    return this.getTypedRuleContext(And_groupContext,0);
	};

	or_group() {
	    return this.getTypedRuleContext(Or_groupContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.enterGroup(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CourseRequisitesParserListener ) {
	        listener.exitGroup(this);
		}
	}


}




CourseRequisitesParser.StartContext = StartContext; 
CourseRequisitesParser.CourseContext = CourseContext; 
CourseRequisitesParser.Non_courseContext = Non_courseContext; 
CourseRequisitesParser.And_requisiteContext = And_requisiteContext; 
CourseRequisitesParser.Or_requisiteContext = Or_requisiteContext; 
CourseRequisitesParser.Or_groupContext = Or_groupContext; 
CourseRequisitesParser.And_groupContext = And_groupContext; 
CourseRequisitesParser.GroupContext = GroupContext; 
